align-self to center to avoid stretching

--- a/src/pages/ArticleCard.scss
+++ b/src/pages/ArticleCard.scss
@@ -20,6 +20,7 @@
   margin: 1px;
   align-self: center;
   max-width: 100%;
+  object-fit: contain;
 
 }
 
